grammar.js
        file: $ => repeat(choice(
            $.alias,
            $.function,
            $.assignment,
            $.comment,
            $.import,
            $.mod,
            $.recipe,
            $.setting,
            $.unexport,
        )),

        // ========================================================================================
        // Aliases

        assignment: $ => seq(
            // Not all builtin attributes are supported in practice for assignements but that's not
            // the responsibility of Tree-Sitter
            repeat($._attribute_list),
            optional(choice(
              'eager',
              'export',
            )),
            field('name', $.identifier),
            ':=',
            $.expression,
            $._ceol,
        ),

        import: $ => seq(
            'import',
            optional(imm('?')),
            alias($.string, $.path),
            $._ceol,
        ),

        mod: $ => prec.right(seq(
            // Technically only `doc` is a valid attribute on modules at the moment but that's okay
            repeat($._attribute_list),
            'mod',
            optional(imm('?')),
            field('name', $.identifier),
            optional(alias($.string, $.path)),
            $._ceol,
        )),

        // ========================================================================================
        // Recipes

        recipe: $ => seq(
            repeat($._attribute_list),
            optional('@'),
            field('name', $.identifier),
            optional($.recipe_parameters),
            ':',
            repeat($.recipe_dependency),
            optional(seq(
                '&&',
                repeat($.recipe_dependency),
            )),
            $._ceol,
            optional($.recipe_body),
        ),

        recipe_parameters: $ => seq(
            repeat($.recipe_parameter),
            choice($.recipe_parameter, $.variadic_parameter),
        ),

        _attribute_list: $ => seq(
            '[',
            $.attribute,
            repeat(seq(',', $.attribute)),
            ']',
            $._ceol,
        ),

        // <https://just.systems/man/en/chapter_34.html?highlight=attribute#recipe-attributes>
        attribute: $ => seq(
            field('name', $.identifier),
            optional(choice(
                seq(':', $.string),
                seq(
                    '(',
                    $.expression,
                    repeat(seq(
                        ',',
                        choice(
                            $.attribute_named_parameter,
                            $.expression,
                        ),
                    )),
                    ')',
                ),
            )),
        ),

        attribute_named_parameter: $ => seq(
            field('name', $.identifier),
            optional(seq(
                '=',
                field('value', $.expression),
            )),
        ),

        recipe_parameter: $ => seq(
            optional('$'),
            field('name', $.identifier),
            optional(seq('=', $.value)),
        ),

        variadic_parameter: $ => seq(
            choice('+', '*'),
            $.recipe_parameter,
        ),

        recipe_dependency: $ => choice(
            $._identifier_path,
            seq('(', $._identifier_path, repeat($.expression), ')'),
        ),

        // In practice, Just supports multiple shebang lines as long as they're all at the top of the
        // recipe, but this is only for its own parsing: the first shebang lines interprets the second,
        // which interprets the third, and so on until an actual recipe line happens.
        // This situation is relevant almost only in Nix, where everything is bash anyway so let's not
        // try to parse it more than this as long as there is no issue reported with it.
        // NOTE: this was added in Just 1.34.0
        recipe_body: $ => choice(
            seq(
                // Fields can be used for negative matching in queries, which is not possible (I think) for nodes
                field('shebang', $.shebang_line),
                repeat($.recipe_line),
            ),
            repeat1($.recipe_line),
        ),

        shebang_line: $ => seq(
            /( |\t)+/,
            // TODO: find a way to make this work for `@` and `-`
            //       see `Recipes: Bodies: Shebang, with quiet/ignore error`, first two recipes
            optional(choice('@-', '-@')),
            choice(
                seq(
                    '#!/usr/bin/env',
                    repeat(/-\w+/),
                    $.shebang_shell,
                ),
                // In case `#!/usr/bin/env` is not used, assume the name at the end of the path
                // given to `#!` is the 'shell' to use
                seq(
                    /#!(\/([a-zA-Z0-9\-_]+\/)*)?/,
                    $.shebang_shell,
                ),
            ),
            repeat($._recipe_line_choice),
            $._eol,
        ),

        shebang_shell: $ => /\w+/,

        recipe_line: $ => seq(
            // This is not exactly correct in that the first line defines the indentation length
            // and all following lines in the recipe must use the same.
            // In practice, it's better to reset on every line for better highlighting of the rest,
            // It allows easy handling of backslash-continuated lines that may be indented more.
            /( |\t)+/,
            optional(choice(
              '-', '?', '@',

              '-?', '-@',
              '?-', '?@',
              '@-', '@?',

              '-?@', '-@?',
              '?-@', '?@-',
              '@-?', '@?-',
            )),
            repeat1($._recipe_line_choice),
            $._eol,
        ),

        _recipe_line_choice: $ => choice(
            field('recipe_content', '{{{{'),
            $.interpolation,
            // Same trick as the indented normal string
            field('recipe_content', /.[^\{\r\n]?/),
        ),

        interpolation: $ => seq(
            field('interpolation_marker', '{{'),
            $.expression,
            field('interpolation_marker', '}}'),
        ),

        // ========================================================================================
        // Settings

        // <https://just.systems/man/en/chapter_27.html?highlight=dotenv-filename#table-of-settings>
        expression: $ => prec.right(choice(
            seq('if', $.expression, '{', $.expression, '}', optional(seq('else', '{', $.expression, '}'))),
            seq('assert', $.assert_parameters),
            seq($.value, choice('/', '+'), $.expression),
            seq('/', $.expression),
            seq($.expression, '&&', $.expression),
            seq($.expression, '||', $.expression),
            seq($.expression, choice('==', '!='), $.expression),
            seq($.expression, choice('=~', '!~'), alias($.expression, $.regex)),
            $.value,
        )),

        value: $ => choice(
            $.function_call,
            seq('(', $.expression, ')'),
            seq('!', $.value),
            $.external_command,
            $.string,
            $.list,
            prec(-1, $.identifier),
            $.numeric_error,
        ),

        // <https://just.systems/man/en/chapter_32.html>
        function_call: $ => seq(field('name', $.identifier), '(', optional($.function_call_parameters), ')'),

        function_call_parameters: $ => $._comma_separated_expressions,

        _comma_separated_expressions: $ => seq($.expression, repeat(seq(',', $.expression)), optional(',')),

        // ========================================================================================
        // Backticks

        external_command: $ => choice(
            $._indented_format_backtick,
            $._format_backtick,
            $._indented_backtick,
            $._backtick,
        ),

        _format_backtick: $ => seq(
            "f`",
            // Expose `content` to allow injection of other languages (bash)
            alias(repeat(choice(
                '{{{{',
                $.interpolation,
                /[^`]/,
            )), $.content),
            "`",
        ),

        _indented_format_backtick: $ => seq(
            "f```",
            // Expose `content` to allow injection of other languages (bash)
            alias(repeat(choice(
                '{{{{',
                $.interpolation,
                // See `indented_normal_string`.
                /.[^`]?/,
            )), $.content),
            "```",
        ),

        _backtick: $ => seq(
            "`",
            // Expose `content` to allow injection of other languages (bash)
            alias(/[^`]*/, $.content),
            "`",
        ),

        _indented_backtick: $ => seq(
            "```",
            // See `indented_normal_string`.
            // Expose `content` to allow injection of other languages (bash)
            alias(repeat(/.[^`]?/), $.content),
            "```",
        ),

        // ========================================================================================
        // Strings

        string: $ => choice(
            $._indented_format_string,
            $._format_string,
            $._indented_normal_string,
            $._normal_string,
            $._indented_raw_format_string,
            $._raw_format_string,
            $._indented_raw_string,
            $._raw_string,
            $.shell_expanded_string,
        ),

        _indented_format_string: $ => seq(
            'f"""',
            repeat(choice(
                '{{{{',
                $.interpolation,
                $.escape_sequence,
                // See `indented_normal_string`.
                /.[^"]?/,
            )),
            '"""',
        ),

        _format_string: $ => seq(
            'f"',
            repeat(choice(
                '{{{{',
                $.interpolation,
                $.escape_sequence,
                /[^"]/,
            )),
            '"',
        ),

        _indented_normal_string: $ => seq(
            '"""',
            repeat(choice(
                $.escape_sequence,
                // Necessary to ensure escapes sequences are not eaten and that `<anything>"` does
                // not eat the `"` when it could be part of the end of the string.
                /.[^"]?/,
            )),
            '"""'
        ),

        _normal_string: $ => seq(
            '"',
            repeat(choice(
                $.escape_sequence,
                /[^"]/,
            )),
            '"',
        ),

        _indented_raw_format_string: $ => seq(
            "f'''",
            repeat(choice(
                '{{{{',
                $.interpolation,
                // See `indented_normal_string`.
                /.[^']?/,
            )),
            "'''",
        ),

        _raw_format_string: $ => seq(
            "f'",
            repeat(choice(
                '{{{{',
                $.interpolation,
                /[^']/,
            )),
            "'",
        ),

        _indented_raw_string: $ => seq(
            "'''",
            // See `indented_normal_string`.
            repeat(/.[^']?/),
            "'''",
        ),

        _raw_string: $ => seq(
            "'",
            /[^']*/,
            "'",
        ),

        escape_sequence: $ => choice(
            '\\n',
            '\\r',
            '\\t',
            '\\"',
            '\\\\',
            // Raw unicode codepoints
            /\\u\{[a-fA-F0-9]{1,6}\}/,
        ),

        // Shell-expanded Strings

        identifier: $ => /[a-zA-Z_][a-zA-Z0-9_-]*/,

        _identifier_path: $ => seq(
          repeat($.module_path),
          field('name', $.identifier),
        ),

        // Allows distinguish a module identifier from a item at the end of a path
        _eol: $ => /\r?\n/,
        _ceol: $ => seq(optional($.comment), $._eol),

        // Numbers aren't allowed as values, but capturing them leads to better error recovery.
