test/corpus/imports.txt
===
Import: required
===

import "a/b/justfile"

import "/ab/cd/just"

import '~/just'

---

(file
  (import
    (string))
  (import
    (string))
  (import
    (string)))

===
Import: optional
===

import? "a/b/justfile"

import? "/ab/cd/just"

import? '~/just'

---

(file
  (import
    (string))
  (import
    (string))
  (import
    (string)))
