test/corpus/indented_backticks.txt
===
Indented backtick: empty
===

a := ``````

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (indented_backtick)))))

===
Indented backtick: with basic content
===

a := ```raw string 🦀```

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (indented_backtick)))))

===
Indented backtick: with ` inside
===

a := ```raw string with ` inside```

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (indented_backtick)))))

===
Indented backtick: with line breaks
===

a := ```
  a line break
  or more```

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (indented_backtick)))))

===
Indented backtick: with escape sequences
===

a := ```raw \t \n \r \\ \" string```

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (indented_backtick)))))
