test/corpus/indented_normal_strings.txt
===
Indented normal string: empty
===

""""""

---

(file
  (string
    (indented_normal_string)))

===
Indented normal string: with basic content
===

"""normal string 🦀"""

---

(file
  (string
    (indented_normal_string)))

===
Indented normal string: with line breaks
===

"""
  a line break
  or more"""

---

(file
  (string
    (indented_normal_string)))

===
Indented normal string: with " inside
===

"""
  a line "break"
  or more"""

---

(file
  (string
    (indented_normal_string)))

===
Indented normal string: with escape sequences
===

"""normal \t \n \r \\ \" string"""

---

(file
  (string
    (indented_normal_string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))
