test/corpus/indented_raw_strings.txt
===
Indented raw string: empty
===

a := ''''''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (indented_raw_string))))))

===
Indented raw string: with basic content
===

a := '''raw string 🦀'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (indented_raw_string))))))

===
Indented raw string: with line breaks
===

a := '''
  a line break
  or more'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (indented_raw_string))))))

===
Indented raw string: with " inside
===

a := '''
  a line "break"
  or more'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (indented_raw_string))))))

===
Indented raw string: with ' inside
===

a := '''
  a line 'break'
  or more'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (indented_raw_string))))))

===
Indented raw string: with escape sequences
===

a := '''raw \t \n \r \\ \" string'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (indented_raw_string))))))
