test/corpus/modules.txt
===
Module: just a name
===

mod a

---

(file
  (mod
    (identifier)))

===
Module: just a name, optional
===

mod? a

---

(file
  (mod
    (identifier)))

===
Module: name and path
===

mod a 'b/c.just'

---

(file
  (mod
    (identifier)
    (path)))

===
Module: name and path, optional
===

mod? a "b/c.just"

---

(file
  (mod
    (identifier)
    (path)))

===
Module: with doc attribute
===

[doc]
mod a

[doc("some documentation")]
mod b

---

(file
  (mod
    (attribute
      (identifier))
    (identifier))
  (mod
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (identifier)))
