test/corpus/normal_strings.txt
===
Normal string: empty
===

a := ""

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (normal_string))))))

===
Normal string: with basic content
===

a := "normal string 🦀"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (normal_string))))))

===
Normal string: with line breaks
===

a := "
  a line break
  or more"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (normal_string))))))

===
Normal string: with escape sequences
===

a := "normal \t \n \r \\ \" string"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (normal_string
            (escape_sequence)
            (escape_sequence)
            (escape_sequence)
            (escape_sequence)
            (escape_sequence)))))))
