test/corpus/raw_strings.txt
===
Raw string: empty
===

a := ''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Raw string: with basic content
===

a := 'raw string 🦀'

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Raw string: with line breaks
===

a := '
  a line break
  or more'

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Raw string: with " inside
===

a := '
  a line "break"
  or more'

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Raw string: with escape sequences
===

a := 'raw \t \n \r \\ \" \u{a1F} string'

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))
