test/corpus/recipe_attributes.txt
===
Recipes: Attributes: Single one
===

[unknow_attr]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (identifier)))

===
Recipes: Attributes: Comma separated
===

[attr1, attr2, attr3]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (identifier)))

===
Recipes: Attributes: Multiples
===

[attr1]
[attr2]
[attr3]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (identifier)))

===
Recipes: Attributes: Single one, with param, in parentheses
===

[unknow_attr("param string")]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (identifier)))

===
Recipes: Attributes: Single one, with multiple parameters, in parentheses
===

[arg("field", pattern="\d+")]
r field:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier)))))

===
Recipes: Attributes: Single one, parse well-known `arg()` attribute
===

[arg("field", pattern="\d+")]
r field:

[arg("field", help="help text")]
r field:

[arg("field", long="long")]
r field:

[arg("field", long)]
r field:

[arg("field", short="x")]
r field:

[arg("field", value="VALUE")]
r field:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier)))))

===
Recipes: Attributes: Single one, parse well-known `env()` attribute
===

[env("ENV", "value")]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (expression
        (value
          (string))))
    (identifier)))

===
Recipes: Attributes: Single one, parse well-known `metadata()` attribute
===

[metadata("metadata", "value")]
[metadata("metadata-2", "value-2")]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (expression
        (value
          (string))))
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (expression
        (value
          (string))))
    (identifier)))

===
Recipes: Attributes: Single one, parse well-known `confirm()` attribute
===

[confirm("with os: " + os())]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string))
        (expression
          (value
            (function_call
              (identifier))))))
    (identifier)))

===
Recipes: Attributes: Single one, with param, with colon
===

[unknow_attr: "param string"]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (string))
    (identifier)))

===
Recipes: Attributes: Comma separated, with param, with parentheses
===

[attr1, attr2('param string'), attr3]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (identifier)))

===
Recipes: Attributes: Comma separated, with param, with colon
===

[attr1, attr2: 'param string', attr3]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier)
      (string))
    (attribute
      (identifier))
    (identifier)))

===
Recipes: Attributes: Multiples, with param
===

[attr1]
[attr2]
[attr3("""param string""")]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (identifier)))

===
Recipes: Attributes: Builtins, separated
===

[confirm]
[confirm("prompt")]
[doc]
[doc("doc")]
[extension('.ext')]
[group('recipe group')]
[lazy]
[linux]
[macos]
[no-cd]
[no-exit-message]
[no-quiet]
[positional-arguments]
[private]
[script]
[script("bash -c")]
[unix]
[windows]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (identifier)))

===
Recipes: Attributes: Builtins, all at once
===

[
  confirm,
  confirm("prompt"),
  doc,
  doc("doc"),
  extension('.ext'),
  group('recipe group'),
  lazy,
  linux,
  macos,
  no-cd,
  no-exit-message,
  no-quiet,
  positional-arguments,
  private,
  script,
  script("bash -c"),
  unix,
  windows
]
r:

---

(file
  (recipe
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (attribute
      (identifier)
      (expression
        (value
          (string))))
    (attribute
      (identifier))
    (attribute
      (identifier))
    (identifier)))
